--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,46 @@
 # alkemy-workflow changelog
 
-## 0.9.0
+## 0.1.4
+
+2022-07-12
+
+### Added
+
+- Add link to github in task comment
+
+### 0.1.3
+
+2022-07-01
+
+### Added
+
+- show spaces, folders, lists and tasks
+
+### 0.1.2
+
+2022-06-29
+
+### Added
+
+- add pull request command
+
+### 0.1.1
+
+2022-06-28
+
+### Added
+
+- add init command
+
+### 0.1.0
+
+2022-06-27
+
+### Added
+
+- tests
+
+## 0.0.9
 
 2022-06-24
 
