--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,22 @@
 # alkemy-workflow changelog
 
+# 0.1.9
+
+2022-09-13
+
+### Added
+
+- Show workspace information
+- Test coverage
+
+# 0.1.8
+
+2022-08-30
+
+### Fix
+
+- Catch missing home directory exception
+
 # 0.1.7
 
 2022-08-29
